2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am: Regenerated.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* PCI_bus/PCI.c, PCI_bus/PCI.h, PCI_bus/flash.c, console/85c30.h,
	console/console.c, console/consolebsp.h, console/tbl85c30.c,
	include/gen2.h, irq/FPGA.c, irq/irq.c, irq/irq.h, irq/irq_init.c,
	pci/no_host_bridge.c, startup/bspclean.c, startup/bspstart.c,
	startup/genpvec.c, startup/vmeintr.c: File head clean up.

2008-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, PCI_bus/PCI.c, PCI_bus/universe.c, startup/genpvec.c:
	Fix warnings.

2008-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am, PCI_bus/PCI.c, PCI_bus/PCI.h,
	PCI_bus/universe.c, console/85c30.c, console/85c30.h,
	console/consolebsp.h, console/tbl85c30.c, include/gen2.h,
	startup/Hwr_init.c, startup/bspstart.c, startup/genpvec.c,
	startup/setvec.c, startup/vmeintr.c, timer/timer.c, tod/tod.c,
	vme/VMEConfig.h: Some clean up.
	* include/coverhd.h: Removed.

2008-09-30	Jennifer Averett <jennifer.averett@oarcorp.com>

	* include/irq-config.h: New file.
	* startup/spurious.c: Removed.

2008-09-30	Jennifer Averett <jennifer.averett@oarcorp.com>

	* Makefile.am, preinstall.am, PCI_bus/universe.c, console/console.c,
	include/bsp.h, irq/FPGA.c, irq/irq.c, startup/Hwr_init.c,
	startup/bspstart.c, startup/vmeintr.c: Modifications required to run
	on hardware. Some cleanup.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove noinst_PROGRAMS (Unused).

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>
