@@ -1,5 +1,10 @@
 2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* Makefile.am: bsp_cleanup() was wrong. Use stub. openpic.h not needed.
+	* startup/bspclean.c: Removed.
+
+2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* preinstall.am: Regenerated.
 
 2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>
